--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 dateparser==1.2.0
 dnspython==2.6.1
+elastic-transport==8.13.0
+elasticsearch==8.13.0
 email_validator==2.1.1
 Flask==3.0.2
 flask-babel==4.0.0
