--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Flask-Moment==1.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+html5lib==1.1
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -44,5 +45,6 @@ types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
 tzlocal==5.2
 urllib3==2.2.1
+webencodings==0.5.1
 Werkzeug==3.0.1
 WTForms==3.1.2
