--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiosmtpd==1.4.5
 alembic==1.13.1
 arrow==1.3.0
 astroid==3.1.0
+async-timeout==4.0.3
 atpublic==4.1.0
 attrs==23.2.0
 Babel==2.14.0
@@ -36,8 +37,10 @@ PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+redis==5.0.3
 regex==2023.12.25
 requests==2.31.0
+rq==1.16.1
 six==1.16.0
 SQLAlchemy==2.0.29
 times==0.7
